--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.6",
     "body-parser": "^1.17.2",
+    "date-and-time": "^0.5.0",
     "express": "^4.15.3",
     "helmet": "^3.8.1",
     "mongoose": "^4.11.1",
